# dynacase-tengine-configuration

./: .gitmodules  Makefile.in  README.md  TENGINE_CONFIGURATION.app  TENGINE_CONFIGURATION_init.php.in  configure.in  info.xml.in
Actions/: Makefile  admin_actions_list.php  tengine_configuration_unavailable.html  tengine_configuration_unavailable.php
locale/en/: TENGINE_CONFIGURATION_en.po
locale/fr/: TENGINE_CONFIGURATION_fr.po
